# decision-brief-claim-gate

./: README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: brief_claim_consistency_audit.csv  evaluation_report.json  failed_claims.json  review_decision.md
configs/: claim_rules.json
data/synthetic/: brief_packets.csv  source_metrics.csv
docs/: case_study.md  interview_walkthrough.md  reviewer_walkthrough.md
scripts/: demo.sh
src/decision_brief_gate/: __init__.py  artifacts.py  checks.py  cli.py  data_contracts.py  evaluation.py  gate.py
tests/: test_checks.py  test_evaluation_guard.py  test_gate.py
